home index.html content done

--- a/public/index.html
+++ b/public/index.html
@@ -46,14 +46,39 @@
     <main>
         <section class="hello-world">
             <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
-            <div class="card bg-dark text-white">
-                <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg" class="card-img"
-                    alt="...">
-                <div class="card-img-overlay hello-world">
-                    <h4 class="card-title">Nuestro Buffette</h4>
-                    <p class="card-text">Last updated 3 mins ago</p>
-                    <a href="/welcome" class="btn btn-primary">Conócenos</a>
+            <div class="card bg-transparent text-white" >
+                <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg" class="card-img has-to-be-opac"
+                    alt="law-on-society">
+                <div class="card-img-overlay">
+                    <h1 class="card-title text-left">Bufete de abogados especializados en litigio</h1>
+                </div>
+            </div>
+        </section>
 
+        <section class="redirected-to-welcome">
+            <div class="card border-light">
+                <!-- {{!--
+                <div class="text-center card-header">Featured</div>
+                --}} -->
+                <div class="text-center card-body">
+                    <h2 class="card-title">
+                        ¿Tienes un conflicto en materia civil y mercantil, familiar, penal o inmobiliaria?
+                    </h2>
+                    <p class="card-text">
+                        En Iglesias y Abogados nos dedicamos a encontrar siempre la solución.
+                    </p>
+                    <p class="card-text">
+                        Enfrentamos de manera jurídica los conflictos ante los tribunales correspondientes, buscando
+                        siempre la solución del problema, por eso somos especialistas en litigar. </p>
+                    <p class="card-text">
+                        De igual forma, conformamos investigaciones serias, que aporten elementos de prueba verídicos
+                        para ser utilizados en un juicio, como parte de nuestro trabajo como litigantes.</p>
+                    <p class="card-text">
+                        Ofrecemos a todos nuestros clientes nuestra amplia experiencia en litigio, para resolver sus
+                        conflictos de manera rápida y eficiente.</p>
+                    <p class="card-text">
+                        Te invitamos a conocernos:</p>
+                    <a href="/conocenos" class="btn btn-primary">Conócenos</a>
                 </div>
             </div>
         </section>
@@ -66,14 +91,13 @@
                 <div class="text-center card-header">Featured</div>
                 --}} -->
                 <div class="text-center card-body">
-                    <h5 class="card-title">
-                        ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                    </h5>
+                    <h3 class="card-title">
+                        No importa el conflicto, siempre hay una solución </h3>
                     <p class="card-text">
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
+                    <a href="/investigaciones" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
         </section>
@@ -85,7 +109,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
