welcome page changes and addition of content and sections

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -48,10 +48,25 @@
         <!-- {{! first section of the main section with an about us on it }} -->
         <section class="first-main-section">
             <div class="container-fluid first-header">
-                <h1 class="text-center">¿Quienes Somos?</h1>
-                <p class="text-center fist-paragraph">
-                    Somos un buffete de abogados con mas de veinte años de experiencia
-                    en las ramas penal, civil y familiar.
+                <h1 class="text-center" style="margin-bottom: 25px;">Iglesias y Abogados</h1>
+                <p class="text-left fist-paragraph">
+                    Somos un bufete de abogados especializados en litigio, con más de 20 años de experiencia en materia
+                    civil y mercantil, familiar, inmobiliaria, penal, y en investigaciones.
+                </p>
+                <p class="text-left fist-paragraph">
+                    Establecido por su fundador, el licenciado Luis Iglesias Garcia, especialista en derecho civil y
+                    mercantil, Iglesias y Asociados comienza su funcionamiento en el año 1975, bajo la ideología de
+                    defender a sus clientes contra las injusticias que se presentan a lo largo de los procesos
+                    judiciales.
+                </p>
+                <p class="text-left fist-paragraph">
+                    Esta idea fue transmitida a su hijo, el Licenciado Rodrigo Iglesias Campos, quien se integra a su
+                    equipo de abogados en el año 1998, como especialista en derecho penal.
+                </p>
+                <p class="text-left fist-paragraph">
+                    Al fallecimiento de su fundador, el bufete continúa ofreciendo sus servicios de litigio en materia
+                    penal, familiar, inmobiliaria y en investigaciones, conformando, a la fecha, un equipo de abogados
+                    que comparte su legado, lidereados por el licenciado Rodrigo Iglesias Campos.
                 </p>
             </div>
         </section>
@@ -59,31 +74,90 @@
         <section class="second-main-section">
             <div class="card mb-3 first-container-home" style="max-width: 100%">
                 <div class="row g-0">
-                    <div class="col-md-6">
+                    <div class="col-md-6 my-1">
                         <img src="https://cdn.pixabay.com/photo/2015/11/17/18/59/architecture-1048092_1280.jpg"
-                            class="img-fluid rounded-start" alt="..." />
+                            class="img-fluid rounded-start" alt="lawyers-office" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Misión</h1>
-                            <p class="card-text">Text here.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Text here.</small>
-                            </p>
+                            <h2 class="card-title">Misión</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Resolver los conflictos e injusticias a los que se enfrentan
+                                    nuestros
+                                    clientes de manera rápida y eficiente, con la premisa de que siempre hay una
+                                    solución.
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <h1 class="card-title">Visión</h1>
-                            <p class="card-text">Text here.</p>
-                            <p class="card-text">
-                                <small class="text-muted">Text here.</small>
-                            </p>
+                            <h2 class="card-title">Visión</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Otorgar a toda la población mexicana la certeza que existen
+                                    recursos
+                                    para obtener una solución justa a sus conflictos, ofreciéndoles los instrumentos
+                                    jurídicos necesarios para defenderlos de los excesos y abusos de la autoridad.</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <img src="https://cdn.pixabay.com/photo/2015/08/21/13/28/courtroom-898931_1280.jpg"
-                            class="img-fluid rounded-start" alt="..." />
+                            class="img-fluid rounded-start" alt="court" />
+                    </div>
+                    <div class="col-md-6 my-1">
+                        <img src="https://cdn.pixabay.com/photo/2015/11/17/18/59/architecture-1048092_1280.jpg"
+                            class="img-fluid rounded-start" alt="principles-and-values" />
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card-body">
+                            <h2 class="card-title">Valores</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Tenacidad.</li>
+                                <li class="list-group-item">Honestidad.</li>
+                                <li class="list-group-item">Lealtad.</li>
+                                <li class="list-group-item">Confianza.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="services-section">
+            <h2 class="text-center my-5">Servicios</h2>
+
+            <div class="row row-cols-1 row-cols-md-2 g-4 my-5">
+                <div class="col">
+                    <div class="card welcome-cards">
+                        <div class="card-body ">
+                            <h5 class="card-title">Derecho Civil \ Mercantil</h5>
+                            <a href="/derechocivilymercantil" class="btn btn-primary">Conócenos</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card welcome-cards">
+                        <div class="card-body">
+                            <h5 class="card-title">Derecho Familiar</h5>
+                            <a href="/derechofamiliar" class="btn btn-primary">Conócenos</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card welcome-cards">
+                        <div class="card-body">
+                            <h5 class="card-title">Derecho Inmobiliario</h5>
+                            <a href="/derechoinmobiliario" class="btn btn-primary">Conócenos</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card welcome-cards">
+                        <div class="card-body">
+                            <h5 class="card-title">Derecho Penal</h5>
+                            <a href="/derechopenal" class="btn btn-primary">Conócenos</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -98,13 +172,13 @@
                 --}} -->
                 <div class="text-center card-body">
                     <h5 class="card-title">
-                        ¿Tienes dudas? Tranquil@ estamos para apoyarte.
+                        No importa el conflicto, siempre hay una solución
                     </h5>
                     <p class="card-text">
-                        Visita nuestra sección de publicaciónes dando click en el botón de
+                        Visita nuestra sección de investigaciones dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
+                    <a href="/investigaciones" class="btn btn-primary">Investigaciónes</a>
                 </div>
             </div>
         </section>
@@ -116,7 +190,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
