--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
+                        <a class="nav-link " aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
@@ -97,7 +97,7 @@
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="/investigaciones" class="btn btn-primary">Publicaciónes</a>
+                    <a href="/investigaciones" class="btn btn-primary">investigaciones</a>
                 </div>
             </div>
         </section>
