addition of the logo to the headers and active links depending of the page

--- a/public/civil.html
+++ b/public/civil.html
@@ -19,16 +19,18 @@
 
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/">
+                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
+                        <a class="nav-link" aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
-                        <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
+                        <a class="nav-item nav-link active" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
@@ -46,23 +48,45 @@
     <main class="ml-3 mr-3 civil-main-section">
         <section class="first-main-section">
             <div class="container-fluid first-header">
-                <h5 class="text-center">Área Civil</h5>
-                <p class="text-center fist-paragraph">
-                    En el área de derecho civil nos especializamos en diferentes ramas
-                    como lo son mercantil, etc.
+                <h1 class="text-center">Litigio en Materia Civil y Mercantil</h1>
+                <p class=" fist-paragraph">
+                    El Derecho Civil y Mercantil abarca desde las relaciones civiles entre las personas hasta todos los
+                    actos de comercio que se realizan entre los diferentes operadores del mercado.
+                </p>
+                <p class="fist-paragraph">
+                    En ciertas ocasiones las partes que firman un contrato no entregan los resultados a los que se
+                    comprometieron en el mismo, cayendo en un incumplimiento o en la necesidad de rescindirlo.
+                </p>
+                <p class="fist-paragraph">
+                    También puede ocurrir que se deba recurrir a las autoridades para hacer válido algún derecho civil o
+                    mercantil.
+                </p>
+                <p class="fist-paragraph">
+                    De igual forma, puede presentarse el caso de que se necesite ayuda para hacer valer algún título de
+                    crédito que se haya otorgado, como cheques o pagarés, o que se requiera la ejecución de una
+                    garantía.
+                </p>
+                <p class="fist-paragraph">
+                    O puede suceder que sea necesario recurrir a la figura del amparo, en el caso de un juicio civil o
+                    mercantil.
+                </p>
+                <p class="fist-paragraph">
+                    Todos estos supuestos son algunos de los casos en los que Iglesias y Abogados apoya a sus clientes
+                    en materia civil y mercantil, utilizando los instrumentos y procedimientos jurídicos adecuados para
+                    llegar a la mejor resolución del caso.
                 </p>
             </div>
         </section>
 
         <section class="second-main-section">
+            <h2 class="text-center my-4">Podemos apoyar en:</h2>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card" style="background-color: #c3ceda">
                         <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg"
                             class="img-fluid card-img-top" alt="people-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Personas</h5>
-                            <p class="card-text">People Law information</p>
+                            <h5 class="card-title">Amparos.</h5>
                         </div>
                     </div>
                 </div>
@@ -71,8 +95,8 @@
                         <img src="https://cdn.pixabay.com/photo/2018/07/02/12/53/ferrari-3511456_1280.jpg"
                             class="img-fluid card-img-top" alt="car-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Bienes</h5>
-                            <p class="card-text">Assets Law information</p>
+                            <h5 class="card-title">Elaboración de contratos de todo tipo en materia civil y mercantil.
+                            </h5>
                         </div>
                     </div>
                 </div>
@@ -84,8 +108,7 @@
                         <img src="https://cdn.pixabay.com/photo/2014/04/10/15/28/fountain-321028_1280.jpg"
                             class="img-fluid card-img-top" alt="house-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Propiedad</h5>
-                            <p class="card-text">Property Law information</p>
+                            <h5 class="card-title">Recuperación de carteras vencidas.</h5>
                         </div>
                     </div>
                 </div>
@@ -94,8 +117,8 @@
                         <img src="https://cdn.pixabay.com/photo/2018/02/02/13/17/the-dollar-3125419_1280.jpg"
                             class="img-fluid card-img-top" alt="possesion-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Posesión</h5>
-                            <p class="card-text">Possesions Law information</p>
+                            <h5 class="card-title">Ejecución de cheques, pagarés y títulos de crédito, al igual que de
+                                garantías hipotecarias y prendarias.</h5>
                         </div>
                     </div>
                 </div>
@@ -107,8 +130,8 @@
                         <img src="https://cdn.pixabay.com/photo/2017/09/09/01/27/attorney-2730806_1280.jpg"
                             class="img-fluid card-img-top" alt="sucesion-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Sucesión</h5>
-                            <p class="card-text">Sussesions Law information</p>
+                            <h5 class="card-title">Ejecución de derechos civiles y mercantiles, tales como cobranza
+                                judicial y extra judicial.</h5>
                         </div>
                     </div>
                 </div>
@@ -117,8 +140,7 @@
                         <img src="https://cdn.pixabay.com/photo/2020/12/05/14/08/man-5806012_1280.jpg"
                             class="img-fluid card-img-top" alt="contract-img" />
                         <div class="card-body">
-                            <h5 class="card-title">Contratos</h5>
-                            <p class="card-text">Contracts Law information</p>
+                            <h5 class="card-title">Incumplimiento, recisión o cumplimiento forzoso de contratos.</h5>
                         </div>
                     </div>
                 </div>
