--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,17 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="/">
+                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                    aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " aria-current="page" href="/conocenos">Conócenos</a>
+                        <a class="nav-link" aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
@@ -46,9 +49,9 @@
     <main>
         <section class="hello-world">
             <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
-            <div class="card bg-transparent text-white" >
-                <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg" class="card-img has-to-be-opac"
-                    alt="law-on-society">
+            <div class="card bg-transparent text-white">
+                <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg"
+                    class="card-img has-to-be-opac" alt="law-on-society">
                 <div class="card-img-overlay">
                     <h1 class="card-title text-left">Bufete de abogados especializados en litigio</h1>
                 </div>
@@ -97,7 +100,7 @@
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="/investigaciones" class="btn btn-primary">investigaciones</a>
+                    <a href="/investigaciones" class="btn btn-primary">Investigaciones</a>
                 </div>
             </div>
         </section>
