--- a/public/familiar.html
+++ b/public/familiar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Litigio en materia familiar</title>
     <meta name="description"
-    content="Iglesias y abogados: bufete de abogados especialistas en litigio en materia familiar. Divorcios, violencia familiar, sucesión testamentaria, amparos.">
+        content="Iglesias y abogados: bufete de abogados especialistas en litigio en materia familiar. Divorcios, violencia familiar, sucesión testamentaria, amparos.">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -18,17 +18,19 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/">
+                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
+                        <a class="nav-link " aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
-                        <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
+                        <a class="nav-item nav-link active" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
