--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -18,15 +18,17 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/">
+                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/conocenos">Conócenos</a>
-                        <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
+                        <a class="nav-link" aria-current="page" href="/conocenos">Conócenos</a>
+                        <a class="nav-item nav-link active" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
