--- a/public/welcome.html
+++ b/public/welcome.html
@@ -18,7 +18,9 @@
     <header>
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Iglesias y Abogados</a>
+                <a class="navbar-brand" href="/">
+                    <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
+                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
