--- a/public/welcome.html
+++ b/public/welcome.html
@@ -77,7 +77,7 @@
             <div class="card mb-3 first-container-home" style="max-width: 100%">
                 <div class="row g-0">
                     <div class="col-md-6 my-1">
-                        <img src="https://cdn.pixabay.com/photo/2015/11/17/18/59/architecture-1048092_1280.jpg"
+                        <img src="./images/office.png"
                             class="img-fluid rounded-start" alt="lawyers-office" />
                     </div>
                     <div class="col-md-6">
@@ -104,11 +104,11 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <img src="https://cdn.pixabay.com/photo/2015/08/21/13/28/courtroom-898931_1280.jpg"
+                        <img src="./images/agreement.png"
                             class="img-fluid rounded-start" alt="court" />
                     </div>
                     <div class="col-md-6 my-1">
-                        <img src="https://cdn.pixabay.com/photo/2015/11/17/18/59/architecture-1048092_1280.jpg"
+                        <img src="./images/values.png"
                             class="img-fluid rounded-start" alt="principles-and-values" />
                     </div>
                     <div class="col-md-6">
