design changes to familiar and welcome htmls

--- a/public/welcome.html
+++ b/public/welcome.html
@@ -74,7 +74,7 @@
         </section>
         <!-- {{! Second main section with two images and description of the mission and vission of the firm }} -->
         <section class="second-main-section">
-            <div class="card mb-3 first-container-home" style="max-width: 100%">
+            <div class="card mb-3 first-container-home" style="border: none; max-width: 100%">
                 <div class="row g-0">
                     <div class="col-md-6 my-1">
                         <img src="./images/office.png"
@@ -127,7 +127,7 @@
         </section>
 
         <section class="services-section">
-            <h2 class="text-center my-5">Servicios</h2>
+            <h2 class="text-center my-4">Servicios</h2>
 
             <div class="row row-cols-1 row-cols-md-2 g-4 my-5">
                 <div class="col">
@@ -168,7 +168,7 @@
         <!-- {{!-- Create a button so all the users can go to the publications section
         --}} -->
         <section class="redirected-to-publications">
-            <div class="card border-light">
+            <div class="card" style="border: none;">
                 <!-- {{!--
                 <div class="text-center card-header">Featured</div>
                 --}} -->
