--- a/public/familiar.html
+++ b/public/familiar.html
@@ -44,19 +44,68 @@
         <div class="container-fluid background-image-familiar"></div>
     </header>
 
-    <main class="ml-3 mr-3 familiar-main-section">
+    <main class="mx-3 familiar-main-section">
 
         <section class="first-main-section">
             <div class='container-fluid first-header'>
-                <h1 class='text-center'>Área Familiar</h1>
-                <p class='text-center fist-paragraph'>En el área de derecho familiar nos especializamos en diferentes
-                    ramas
-                    como lo son divs, etc.</p>
+                <h1 class='text-center'>Litigio en materia familiar</h1>
+                <p class='fist-paragraph'>El derecho familiar es la rama del derecho civil que se encarga de regular
+                    todas las relaciones que se suscitan entre los miembros de una familia.
+                </p>
+                <p class='fist-paragraph'>En la actualidad, ante los diversos cambios que experimenta la sociedad
+                    mexicana, los conflictos entre miembros del núcleo familiar son cada día más comunes, por eso se
+                    hace necesario contar con el apoyo jurídico necesario para llegar a una pronta y adecuada solución.
+                </p>
+                <p class='fist-paragraph'>En caso de un divorcio, por ejemplo, existen varias modalidades, como
+                    divorcios voluntarios, divorcios express o divorcios administrativos. En cualquier caso, es
+                    importante contar con la asesoría jurídica y el apoyo adecuado.
+                </p>
+                <p class='fist-paragraph'>De igual forma, ante una separación, la obtención de una pensión alimenticia
+                    es una materia de litigio importante. Cómo calcular esta pensión, saber lo que incluye y cómo
+                    tramitarla, al igual que la determinación de un régimen de convivencia con los hijos, son conceptos
+                    en los que se debe asesorar al interesado de manera eficiente.
+                </p>
+                <p class='fist-paragraph'>La importancia del tema de la violencia familiar en nuestros días hace
+                    necesario contar con un equipo de abogados que defienda, en todo momento, a las víctimas,
+                    apoyándolos en la preservación de sus derechos. Desde denunciar la violencia familiar hasta obtener
+                    justicia ante este tipo de delitos son procesos delicados que deben ser tratados de la forma más
+                    profesional y adecuada.
+                </p>
+                <p class='fist-paragraph'>De igual forma, los procedimientos que conlleva una sucesión testamentaria, o
+                    los conflictos que se presentan en el caso de que un familiar haya fallecido sin testamento,
+                    requieren también un trabajo profesional que asegure un buen término, con justicia y equidad para
+                    los interesados.
+                </p>
             </div>
         </section>
 
         <section class="second-main-section">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="card mb-3" style="border: none;">
+                <div class="row g-0">
+                    <div class="col-md-4 embed-responsive embed-responsive-16by9">
+                        <img src="./images/family.png" class="img-now embed-responsive-item rounded-start" alt="family-law">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h2 class="card-title">En Iglesias y Abogados estamos comprometidos con los conflictos
+                                familiares, ofreciendo apoyo jurídico en:</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Divorcios.</li>
+                                <li class="list-group-item">Liquidación de sociedad conyugal.</li>
+                                <li class="list-group-item">Régimen de convivencia.</li>
+                                <li class="list-group-item">Pensión alimenticia.</li>
+                                <li class="list-group-item">Aumento y disminución de pensiones.</li>
+                                <li class="list-group-item">Guardias y custodias.</li>
+                                <li class="list-group-item">Cambio de régimen patrimonial.</li>
+                                <li class="list-group-item">Compensaciones familiares.</li>
+                                <li class="list-group-item">Violencia familiar.</li>
+                                <li class="list-group-item">Órdenes de protección.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card" style="background-color: #C3CEDA;">
                         <img src="https://cdn.pixabay.com/photo/2017/08/06/20/11/wedding-2595862_1280.jpg"
@@ -123,7 +172,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
     </main>
 
@@ -153,7 +202,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
