--- a/public/familiar.html
+++ b/public/familiar.html
@@ -83,7 +83,8 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/family.png" class="img-now embed-responsive-item rounded-start" alt="family-law">
+                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start"
+                            alt="family-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -105,96 +106,27 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/08/06/20/11/wedding-2595862_1280.jpg"
-                            class="img-fluid card-img-top" alt="mariage-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Matrimonio</h5>
-                            <p class="card-text">Mariage Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2015/08/26/16/18/breakup-908714_1280.jpg"
-                            class="img-fluid card-img-top" alt="divorce-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Divorcio</h5>
-                            <p class="card-text">Divorce Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/06/20/22/14/man-2425121_1280.jpg"
-                            class="img-fluid card-img-top" alt="couple-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Concubinato</h5>
-                            <p class="card-text">Concubinage Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2017/07/08/21/30/family-2485714_1280.jpg"
-                            class="img-fluid card-img-top" alt="parent-son-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Filiación</h5>
-                            <p class="card-text">Filiation Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2019/10/19/16/30/poverty-4561704_1280.jpg"
-                            class="img-fluid card-img-top" alt="monwy-img">
-                        <div class="card-body">
-                            <h5 class="card-title">Pensión</h5>
-                            <p class="card-text">Pension Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="background-color: #C3CEDA;">
-                        <img src="https://cdn.pixabay.com/photo/2020/03/28/00/21/hands-4975341_1280.jpg"
-                            class="img-fluid card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Adopción</h5>
-                            <p class="card-text">Adoption Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-        </section>
-    </main>
-
-    <!-- {{!-- Create a button so all the users can go to the publications section
+            <!-- {{!-- Create a button so all the users can go to the publications section
         --}} -->
-    <section class="redirected-to-publications">
-        <div class="card border-light">
-            <!-- {{!--
+            <section class="redirected-to-publications">
+                <div class="card border-light">
+                    <!-- {{!--
                 <div class="text-center card-header">Featured</div>
                 --}} -->
-            <div class="text-center card-body">
-                <h5 class="card-title">
-                    ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                </h5>
-                <p class="card-text">
-                    Visita nuestra sección de publicaciónes dando click en el botón de
-                    abajo o contáctanos
-                </p>
-                <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
-            </div>
-        </div>
-    </section>
+                    <div class="text-center card-body">
+                        <h5 class="card-title">
+                            ¿Tienes dudas? Tranquil@ estamos para apoyarte.
+                        </h5>
+                        <p class="card-text">
+                            Visita nuestra sección de publicaciónes dando click en el botón de
+                            abajo o contáctanos
+                        </p>
+                        <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
+                    </div>
+                </div>
+            </section>
+    </main>
 
     <!-- {{!-- Third section of the homepage or presentation page this one has to go on the main handlebrs so it can be in
         the
