civil html content and styles changes

--- a/public/familiar.html
+++ b/public/familiar.html
@@ -45,7 +45,6 @@
     </header>
 
     <main class="mx-3 familiar-main-section">
-
         <section class="first-main-section">
             <div class='container-fluid first-header'>
                 <h1 class='text-center'>Litigio en materia familiar</h1>
@@ -106,26 +105,27 @@
                     </div>
                 </div>
             </div>
+        </section>
 
-            <!-- {{!-- Create a button so all the users can go to the publications section
+        <!-- {{!-- Create a button so all the users can go to the publications section
         --}} -->
-            <section class="redirected-to-publications">
-                <div class="card border-light">
-                    <!-- {{!--
+        <section class="redirected-to-publications">
+            <div class="card border-light">
+                <!-- {{!--
                 <div class="text-center card-header">Featured</div>
                 --}} -->
-                    <div class="text-center card-body">
-                        <h5 class="card-title">
-                            ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                        </h5>
-                        <p class="card-text">
-                            Visita nuestra sección de publicaciónes dando click en el botón de
-                            abajo o contáctanos
-                        </p>
-                        <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
-                    </div>
+                <div class="text-center card-body">
+                    <h3 class="card-title">
+                        No importa el conflicto, siempre hay una solución
+                    </h3>
+                    <p class="card-text">
+                        Visita nuestra sección de publicaciónes dando click en el botón de
+                        abajo o contáctanos
+                    </p>
+                    <a href="/investigaciones" class="btn btn-primary">Publicaciónes</a>
                 </div>
-            </section>
+            </div>
+        </section>
     </main>
 
     <!-- {{!-- Third section of the homepage or presentation page this one has to go on the main handlebrs so it can be in
