--- a/public/civil.html
+++ b/public/civil.html
@@ -45,7 +45,7 @@
         <div class="container-fluid background-image-civil"></div>
     </header>
 
-    <main class="ml-3 mr-3 civil-main-section">
+    <main class="mx-3 civil-main-section">
         <section class="first-main-section">
             <div class="container-fluid first-header">
                 <h1 class="text-center">Litigio en Materia Civil y Mercantil</h1>
@@ -79,68 +79,24 @@
         </section>
 
         <section class="second-main-section">
-            <h2 class="text-center my-4">Podemos apoyar en:</h2>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg"
-                            class="img-fluid card-img-top" alt="people-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Amparos.</h5>
-                        </div>
+            <div class="card mb-3" style="border: none;">
+                <div class="row g-0">
+                    <div class="col-md-4 embed-responsive embed-responsive-16by9">
+                        <img src="./images/corporate.png" class="information-img embed-responsive-item rounded-start"
+                            alt="family-law">
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2018/07/02/12/53/ferrari-3511456_1280.jpg"
-                            class="img-fluid card-img-top" alt="car-img" />
+                    <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title">Elaboración de contratos de todo tipo en materia civil y mercantil.
-                            </h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2014/04/10/15/28/fountain-321028_1280.jpg"
-                            class="img-fluid card-img-top" alt="house-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Recuperación de carteras vencidas.</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2018/02/02/13/17/the-dollar-3125419_1280.jpg"
-                            class="img-fluid card-img-top" alt="possesion-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Ejecución de cheques, pagarés y títulos de crédito, al igual que de
-                                garantías hipotecarias y prendarias.</h5>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2017/09/09/01/27/attorney-2730806_1280.jpg"
-                            class="img-fluid card-img-top" alt="sucesion-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Ejecución de derechos civiles y mercantiles, tales como cobranza
-                                judicial y extra judicial.</h5>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda">
-                        <img src="https://cdn.pixabay.com/photo/2020/12/05/14/08/man-5806012_1280.jpg"
-                            class="img-fluid card-img-top" alt="contract-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Incumplimiento, recisión o cumplimiento forzoso de contratos.</h5>
+                            <h2 class="card-title">Podemos apoyar en:</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Incumplimiento, recisión o cumplimiento forzoso de contratos.</li>
+                                <li class="list-group-item">Ejecución de derechos civiles y mercantiles, tales como cobranza judicial y extra judicial.</li>
+                                <li class="list-group-item">Ejecución de cheques, pagarés y títulos de crédito, al igual que de garantías hipotecarias y prendarias.</li>
+                                <li class="list-group-item">Recuperación de carteras vencidas.</li>
+                                <li class="list-group-item">Elaboración de contratos de todo tipo en materia civil y mercantil.</li>
+                                <li class="list-group-item">Amparos.</li>
+                                <li class="list-group-item">Seguros y fianzas.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -155,9 +111,9 @@
                 <div class="text-center card-header">Featured</div>
                 --}} -->
                 <div class="text-center card-body">
-                    <h5 class="card-title">
-                        ¿Tienes dudas? Tranquil@ estamos para apoyarte.
-                    </h5>
+                    <h3 class="card-title">
+                        No importa el conflicto, siempre hay una solución
+                    </h3>
                     <p class="card-text">
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
@@ -173,7 +129,7 @@
     <footer>
         <section id="contacto" class="first-footer-section">
             <div class="card mb-0" style="max-width: 100%; margin-bottom: 0%; background-color: #050a30">
-                <h2 class="text-left mx-3">Contacto</h2>
+                <h4 class="text-left mx-3">Contacto</h4>
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
