--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,8 @@
                 <a class="navbar-brand" href="/">
                     <img src="./images/logo.png" alt="iglesias-logo" width="60" height="54">
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -95,7 +94,8 @@
                 --}} -->
                 <div class="text-center card-body">
                     <h3 class="card-title">
-                        No importa el conflicto, siempre hay una solución </h3>
+                        No importa el conflicto, siempre hay una solución
+                    </h3>
                     <p class="card-text">
                         Visita nuestra sección de publicaciónes dando click en el botón de
                         abajo o contáctanos
