changes on redirected to investigations section

--- a/public/familiar.html
+++ b/public/familiar.html
@@ -119,10 +119,10 @@
                         No importa el conflicto, siempre hay una solución
                     </h3>
                     <p class="card-text">
-                        Visita nuestra sección de publicaciónes dando click en el botón de
+                        Visita nuestra sección de investigaciónes dando click en el botón de
                         abajo o contáctanos
                     </p>
-                    <a href="/investigaciones" class="btn btn-primary">Publicaciónes</a>
+                    <a href="/investigaciones" class="btn btn-primary">Investigaciónes</a>
                 </div>
             </div>
         </section>
