--- a/public/penal.html
+++ b/public/penal.html
@@ -56,70 +56,28 @@
         </section>
 
         <section class="second-main-section">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col mb-3">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2014/12/02/11/21/prison-553836_1280.jpg"
-                            class="card-img-top" alt="jail-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Penitenciario</h5>
-                            <p class="card-text">Penitenciary Law information</p>
-                        </div>
+            <div class="card mb-3" style="border: none;">
+                <div class="row g-0">
+                    <div class="col-md-4 embed-responsive embed-responsive-16by9">
+                        <img src="./images/family.png" class="information-img embed-responsive-item rounded-start"
+                            alt="family-law">
                     </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/03/26/09/41/tie-690084_1280.jpg"
-                            class="card-img-top" alt="whitecollar-img" />
+                    <div class="col-md-8">
                         <div class="card-body">
-                            <h5 class="card-title fs-6">Administrativo</h5>
-                            <p class="card-text">Administrative Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2012/10/10/16/53/soldier-60707_1280.jpg"
-                            class="card-img-top" alt="soldier-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Militar</h5>
-                            <p class="card-text">Military Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card mb-3" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/04/12/16/33/hammer-719066_1280.jpg"
-                            class="card-img-top" alt=".justice-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Procesal</h5>
-                            <p class="card-text">Procesal Law information</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2015/10/12/15/07/buildings-984195_1280.jpg"
-                            class="card-img-top" alt="corporation-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Corporativo</h5>
-                            <p class="card-text">Corporation Law information</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="background-color: #c3ceda;">
-                        <img src="https://cdn.pixabay.com/photo/2017/02/12/14/00/justice-2060093_1280.jpg"
-                            class="card-img-top" alt="court-img" />
-                        <div class="card-body">
-                            <h5 class="card-title">Acusatorio</h5>
-                            <p class="card-text">Acusatory Law information</p>
+                            <h2 class="card-title">En Iglesias y Abogados estamos comprometidos con los conflictos
+                                familiares, ofreciendo apoyo jurídico en:</h2>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item">Divorcios.</li>
+                                <li class="list-group-item">Liquidación de sociedad conyugal.</li>
+                                <li class="list-group-item">Régimen de convivencia.</li>
+                                <li class="list-group-item">Pensión alimenticia.</li>
+                                <li class="list-group-item">Aumento y disminución de pensiones.</li>
+                                <li class="list-group-item">Guardias y custodias.</li>
+                                <li class="list-group-item">Cambio de régimen patrimonial.</li>
+                                <li class="list-group-item">Compensaciones familiares.</li>
+                                <li class="list-group-item">Violencia familiar.</li>
+                                <li class="list-group-item">Órdenes de protección.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
