addition of investigaciones.html and addition of the route and changes to the headers and redirected to publications section

--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -30,9 +30,9 @@
                         <a class="nav-link " aria-current="page" href="/conocenos">Conócenos</a>
                         <a class="nav-item nav-link" href="/derechoinmobiliario">Derecho Inmobiliario</a>
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
-                        <a class="nav-item nav-link active" href="/derechofamiliar">Derecho Familiar</a>
+                        <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
-                        <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link active" href="/investigaciones">Investigaciónes</a>
                         <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
