--- a/public/penal.html
+++ b/public/penal.html
@@ -33,6 +33,7 @@
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link active" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
@@ -95,10 +96,6 @@
                     <h5 class="card-title">
                         ¿Tienes dudas? Tranquil@ estamos para apoyarte.
                     </h5>
-                    <p class="card-text">
-                        Visita nuestra sección de publicaciónes dando click en el botón de
-                        abajo o contáctanos
-                    </p>
                     <a href="/publicaciones" class="btn btn-primary">Publicaciónes</a>
                 </div>
             </div>
