--- a/public/publicaciones.html
+++ b/public/publicaciones.html
@@ -32,7 +32,8 @@
                         <a class="nav-item nav-link" href="/derechocivilymercantil">Derecho Civil y Mercantil</a>
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
-                        <a class="nav-item nav-link active" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link active" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
