--- a/public/welcome.html
+++ b/public/welcome.html
@@ -33,6 +33,7 @@
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
+                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
@@ -176,11 +177,7 @@
                     <h5 class="card-title">
                         No importa el conflicto, siempre hay una solución
                     </h5>
-                    <p class="card-text">
-                        Visita nuestra sección de investigaciones dando click en el botón de
-                        abajo o contáctanos
-                    </p>
-                    <a href="/investigaciones" class="btn btn-primary">Investigaciónes</a>
+                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
                 </div>
             </div>
         </section>
