background image changes to index.html file

--- a/public/index.html
+++ b/public/index.html
@@ -50,12 +50,13 @@
         <section class="hello-world">
             <!-- {{! For second a background container with an image, as the previews one is going to be on all the handlebars}} -->
             <div class="card bg-transparent text-white">
-                <img src="https://cdn.pixabay.com/photo/2014/09/07/21/52/city-438393_1280.jpg"
+                <img src="./images/portrait.jpeg"
                     class="card-img has-to-be-opac" alt="law-on-society">
-                <div class="card-img-overlay">
-                    <h1 class="card-title text-left">Bufete de abogados especializados en litigio</h1>
-                </div>
             </div>
+        </section>
+
+        <section>
+            <h1 class="card-title text-center">Bufete de abogados especializados en litigio</h1>
         </section>
 
         <section class="redirected-to-welcome">
